# uv-example0

./: .gitignore  README.md  hello.py  poe_tasks.toml  pyproject.toml
