[project]
name = "uv-example0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "poethepoet>=0.30.0",
  "ruff>=0.7.4",
]

[tool.poe.tasks]
check = "uv run ruff check"
[tool.poe.tasks.format]
shell = """
uv run ruff format &&
# biome format --write . &&
dprint fmt &&
textlint --fix "**/*.md"
"""
