[project]
name = "uv-example0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# [dependency-groups]
# dev = [
#   "ruff>=0.7.4",  # move to `uv tool instal ruff`
# ]

[tool.poe.tasks]
hello = "uv run hello.py"
check = "ruff check"
format.shell = """
ruff format &&
# biome format --write . &&
dprint fmt &&
textlint --fix "**/*.md"
"""
requirements = "uv pip compile pyproject.toml -o requirements.txt"
